--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -108,7 +108,7 @@
       <!-- Show Login/Register Links if User is Not Logged In -->
       <div *ngIf="!isuserExist" class="collapse navbar-collapse order-lg-1">
         <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link" routerLink="/login">Login</a></li>
+          <li class="nav-item"><a class="nav-link" routerLink="/login/home">Login</a></li>
           <li class="nav-item"><a class="nav-link" routerLink="/register">Register</a></li>
         </ul>
       </div>
