--- a/src/app/modules/mentor/Components/reviews-list/reviews-list.component.html
+++ b/src/app/modules/mentor/Components/reviews-list/reviews-list.component.html
@@ -38,7 +38,7 @@ font-style: normal;">Reviews From Mentors</h5>
                 <div class="card-body">
                   <div class="review-header d-flex align-items-center">
                     <div class="profile-picture me-3">
-                      <img [src]="review.Reviewer.Image" alt="User Profile" class="rounded-circle"  style=""/>
+                      <img  src="http://localhost:5164/{{review.Reviewer.Image}}" class="rounded-circle"  style=""/>
                     </div>
                     <div class="review-info">
                       <h5 class="reviewer-name mb-1">{{ review.Reviewer.FirstName }} {{ review.Reviewer.LastName }}</h5>
