--- a/src/app/shared/components/quizzes-details/quizzes-details.component.html
+++ b/src/app/shared/components/quizzes-details/quizzes-details.component.html
@@ -30,7 +30,7 @@
           <br>
           <div class="row align-content-center">
             <div class="col-md-6">
-              <button class="btn btn-primary" [routerLink]="['/developer/quiz', selectedQuiz.QuizId]">Start Quiz</button>
+              <button class="btn btn-primary" [routerLink]="[role, selectedQuiz.QuizId]">Start Quiz</button>
 
             </div>
           </div>
