--- a/src/app/modules/mentor/Components/session-details/session-details.component.html
+++ b/src/app/modules/mentor/Components/session-details/session-details.component.html
@@ -90,7 +90,7 @@
                            <h6>Developer Info</h6>
                            <p class="mb-1 lh-lg text-muted">
 
-                              <img src="{{sessiondetails.UserImage}}" class="rounded-circle" style="width: 70px;">
+                              <img src="http://localhost:5164/{{sessiondetails.UserImage}}" class="rounded-circle" style="width: 70px;">
 
                               <br>
                               {{sessiondetails.UserFirstName}} {{sessiondetails.UserLastName}}
@@ -134,7 +134,7 @@
                   </div>
 
                }
-               
+
                   <!-- <form>
                       <div class="col-md-6">
                          <h5>Feedback</h5>
@@ -144,12 +144,12 @@
                      </form> -->
                      @if(sessiondetails.Status==1){
                   <div class="col-md-6 ">
-                   
+
                         <h5>Feedback</h5>
                         <p class="form-control mb-3" rows="3"> {{sessiondetails.Feedback}}</p>
-                       
-                       
-                 
+
+
+
                   </div>
                }
                @if(sessiondetails.Status==2 ){
