--- a/src/app/shared/components/quiz-card/quiz-card.component.html
+++ b/src/app/shared/components/quiz-card/quiz-card.component.html
@@ -5,7 +5,7 @@
   </div>
 
   <div class="card-actions">
-    <button class="btn btn-outline-primary" [routerLink]="['/Quiz', Quiz.QuizId]">Quiz Details</button>
+    <button class="btn btn-outline-primary" [routerLink]="[role, Quiz.QuizId]">Quiz Details</button>
   </div>
 </div>
 
