--- a/src/app/shared/components/addsocialaccount/addsocialaccount.component.html
+++ b/src/app/shared/components/addsocialaccount/addsocialaccount.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="socialAccountForm" (ngSubmit)="onSave()" class="social-account-form">
+<form [formGroup]="socialAccountForm" class="social-account-form">
 
   <!-- Social Media Platform Selection -->
   <div class="form-group">
