--- a/src/app/modules/admin/profile/profile.component.html
+++ b/src/app/modules/admin/profile/profile.component.html
@@ -37,9 +37,9 @@
                           <!--button-->
                           <!-- <div class="d-flex flex-row gap-3 align-items-center custom-flex-col">
                             <a [routerLink]="['/developer/booking/',id]" class="btn btn btn-outline-primary">
-  
+
                               <i class="fa-regular fa-handshake"></i>
-                             Accept Request 
+                             Accept Request
                             </a>
                             <a [routerLink]="['/developer/query/', id]" class="btn btn-outline-primary"><i
                                 class="fa-solid fa-circle-question"></i>Reject Request</a>
@@ -47,16 +47,16 @@
                           @if (mentorProfile.Status==0
                   ){
                           <div class="d-flex flex-row gap-3 align-items-center custom-flex-col">
-                         
-                          
+
+
                             <!-- <a  class="btn btn-outline-success accept-btn">
                               <i class="fa-regular fa-handshake"></i> Accept Request
                             </a> -->
-                            <button class="btn btn-outline-success accept-btn" (click)="changeRole()">
+                            <button class="btn btn-outline-success accept-btn" (click)="updateStatus(userId)">
                               <i class="fa-regular fa-handshake"></i> Accept Request
                             </button>
-                            
-                            <a class="btn btn-outline-danger reject-btn" (click)="updateStatus(userId)">
+
+                            <a class="btn btn-outline-danger reject-btn"  (click)="changeRole()">
                               <i class="fa-solid fa-circle-question"></i> Reject Request
                             </a>
                           </div>}
@@ -118,7 +118,7 @@
                           </div>
                         </div>
                       </div>
-  
+
                       <div>
                         <span
                           class="badge rounded-pill text-success-emphasis bg-success-subtle border border-success align-items-center">
@@ -137,7 +137,7 @@
               <!--card-->
               <div class="card">
                 <!--card body-->
-  
+
                 <div class="card-body    d-flex flex-column gap-3">
                   <!--heading-->
                   <h5 class="mb-0">About</h5>
@@ -153,7 +153,7 @@
                     </div>
                   </div>
                 </div>
-  
+
               </div>
               <!--card-->
               <div class="card">
@@ -162,9 +162,9 @@
                   <div class="d-flex flex-column gap-3">
                     <!--heading-->
                     <h5 class="mb-0">Skills</h5>
-  
+
                     <div class="gap-2 d-flex flex-wrap">
-  
+
                       <div class="mentor-skills col-12 mb-0 mt-3" >
                         <div *ngFor="let skill of mentorProfile.Skills" class="skill-circle">
                           {{ skill }}
@@ -205,7 +205,7 @@
                           </div>
                           <div>
                             <h6 class="mb-1">{{ review.Reviewer.FirstName }} {{ review.Reviewer.LastName }}</h6>
-  
+
                             <div
                               class="d-flex flex-md-row flex-column flex-sm-row custom-flex custom-gap gap-md-2 gap-sm-2 align-items-md-center lh-1">
                               <app-rate [value]="review.Rate"></app-rate>
@@ -220,7 +220,7 @@
                         <p class="mb-0">{{ review.Description }}</p>
                       </div>
                     </div>
-  
+
                     <!-- Load More Button -->
                     <div *ngIf="hasMoreReviews">
                       <a id="loadMoreButton" class="btn btn-outline-primary" (click)="loadMoreReviews()">
@@ -232,20 +232,20 @@
                         Load less reviews
                       </a>
                     </div>
-  
-  
-  
-  
-  
-  
-  
-              
+
+
+
+
+
+
+
+
                   </div>
-  
+
                 </div>
               </div>
               }@else {
-  
+
               <div class="card">
                 <div class="card-body   ">
                   <div class="d-flex flex-md-row flex-column align-items-md-center justify-content-between gap-2">
@@ -256,27 +256,27 @@
                   </div>
                 </div>
               </div>
-  
+
               }
             </div>
-  
+
             <!-- <div class="col-xl-4 col-12"> -->
             <!--card-->
             <!-- <div class="card"> -->
             <!--card body-->
             <!-- <div class="card-body px-md-5 pt-2"> -->
             <!--nav tab-->
-  
+
             <!-- <div class="tab-content" id="tabContent"> -->
-  
-  
-  
-  
-  
-  
-  
-  
-  
+
+
+
+
+
+
+
+
+
           </div>
           <div *ngIf="mentorProfile?.Educations?.length <= 0 && mentorProfile?.Experiences?.length <= 0" class="col-xl-12 col-12">
             <div class="d-flex flex-column gap-4" style="height: fit-content;">
@@ -311,7 +311,7 @@
                           <!--button-->
                           <!-- <div class="d-flex flex-row gap-3 align-items-center custom-flex-col">
                             <a [routerLink]="['/developer/booking/',id]" class="btn btn btn-outline-primary">
-  
+
                               <i class="fa-regular fa-handshake"></i>
                               Book Session
                             </a>
@@ -322,15 +322,15 @@
                           @if (mentorProfile.Status==0
                   ){
                           <div class="d-flex flex-row gap-3 align-items-center custom-flex-col">
-                         
+
                             <!-- <a  class="btn btn-outline-success accept-btn">
                               <i class="fa-regular fa-handshake"></i> Accept Request
                             </a> -->
-                          
+
                             <button class="btn btn-outline-success accept-btn" (click)="updateStatus(userId)" >
                               <i class="fa-regular fa-handshake"></i> Accept Request
                             </button>
-                            
+
                             <!-- <a  class="btn btn-outline-danger reject-btn">
                               <i class="fa-solid fa-circle-question"></i> Reject Request
                             </a> -->
@@ -396,7 +396,7 @@
                           </div>
                         </div>
                       </div>
-  
+
                       <div>
                         <div
                           class="badge rounded-pill text-success-emphasis bg-success-subtle border border-success align-items-center">
@@ -408,7 +408,7 @@
                           Session Price: $ {{ mentorProfile?.Price }}
                         </div>
                       <br/>
-                        <button (click)="downloadFile(mentorProfile?.cv)" class="btn btn-outline-primary btn-sm ms-0 col-4 me-5 mt-3 " 
+                        <button (click)="downloadFile(mentorProfile?.cv)" class="btn btn-outline-primary btn-sm ms-0 col-4 me-5 mt-3 "
                         style="width: 115px; height: fit-content; border-radius: 5px;" > Download
                               CV</button>
                       </div>
@@ -419,7 +419,7 @@
               <!--card-->
               <div class="card">
                 <!--card body-->
-  
+
                 <div class="card-body    d-flex flex-column gap-3">
                   <!--heading-->
                   <h5 class="mb-0">About</h5>
@@ -435,7 +435,7 @@
                     </div>
                   </div>
                 </div>
-  
+
               </div>
               <!--card-->
               <div class="card">
@@ -444,9 +444,9 @@
                   <div class="d-flex flex-column gap-3">
                     <!--heading-->
                     <h5 class="mb-0">Skills</h5>
-  
+
                     <div class="gap-2 d-flex flex-wrap">
-  
+
                       <div class="mentor-skills col-12 mb-0 mt-3" >
                         <div *ngFor="let skill of mentorProfile.Skills" class="skill-circle">
                           {{ skill }}
@@ -487,7 +487,7 @@
                           </div>
                           <div>
                             <h6 class="mb-1">{{ review.Reviewer.FirstName }} {{ review.Reviewer.LastName }}</h6>
-  
+
                             <div
                               class="d-flex flex-md-row flex-column flex-sm-row custom-flex custom-gap gap-md-2 gap-sm-2 align-items-md-center lh-1">
                               <app-rate [value]="review.Rate"></app-rate>
@@ -502,7 +502,7 @@
                         <p class="mb-0">{{ review.Description }}</p>
                       </div>
                     </div>
-  
+
                     <!-- Load More Button -->
                     <div *ngIf="hasMoreReviews">
                       <a id="loadMoreButton" class="btn btn-outline-primary" (click)="loadMoreReviews()">
@@ -514,20 +514,20 @@
                         Load less reviews
                       </a>
                     </div>
-  
-  
-  
-  
-  
-  
-  
-              
+
+
+
+
+
+
+
+
                   </div>
-  
+
                 </div>
               </div>
               }@else {
-  
+
               <div class="card">
                 <div class="card-body   ">
                   <div class="d-flex flex-md-row flex-column align-items-md-center justify-content-between gap-2">
@@ -538,38 +538,38 @@
                   </div>
                 </div>
               </div>
-  
+
               }
             </div>
-  
+
             <!-- <div class="col-xl-4 col-12"> -->
             <!--card-->
             <!-- <div class="card"> -->
             <!--card body-->
             <!-- <div class="card-body px-md-5 pt-2"> -->
             <!--nav tab-->
-  
+
             <!-- <div class="tab-content" id="tabContent"> -->
-  
-  
-  
-  
-  
-  
-  
-  
-  
+
+
+
+
+
+
+
+
+
           </div>
-  
-  
+
+
           <!-- </div> -->
           <!-- </div> -->
-  
-  
+
+
           <!-- <div class="col-xl-4 col-4">
               <div class="card mb-4">
-              
-              
+
+
                 <div class="profile-section">
                   <h5 class="   ">Education</h5>
                   <div class="">
@@ -581,11 +581,11 @@
                     <p><strong>Start Date:</strong> startDate | date:'longDate'</p>
                     <p><strong>End Date:</strong> Ongoing</p>
                     <p><strong>End Date:</strong> endDate | date:'longDate'/p>
-                    
+
                   </div>
                 </div>
               </div> -->
-  
+
           <div class="col-xl-4 col-12">
             <!-- @if(mentorProfile.Educations.length>=1){
                 <div class="card mb-4">
@@ -635,7 +635,7 @@
                       </div>
                     </div>
                   </div>
-  
+
                   <!-- Show More/Show Less Button -->
                   <button *ngIf="mentorProfile?.Educations?.length > maxItemsToShow" class="btn btn-link"
                     (click)="toggleShowAll()">
@@ -644,43 +644,43 @@
                 </div>
               </div>
             </div>
-  
-            <!-- 
+
+            <!--
               <div id="i4" class="mt_20 ng-star-inserted">
                 <div class="education ng-star-inserted">
-                  
+
                  <div  class="cptn">
                   <div class="title"> Indian Institute of Management (IIM), Mumbai </div>
                   <div  class="org">
-                   
+
                     <span  class="icon ng-star-inserted" style="--active: var(--grey-800); --color: var(--grey-800); --hover: var(--grey-800); --size: 18px; mask-image: url(&quot;https://cdn.unstop.com/assets/icons/school.svg&quot;);">
-  
-                    </span><div > MBA </div></div><div 
+
+                    </span><div > MBA </div></div><div
                      class="org">
                      <span  class="icon ng-star-inserted" style="--active: var(--grey-800); --color: var(--grey-800); --hover: var(--grey-800); --size: 18px; mask-image: url(&quot;https://cdn.unstop.com/assets/icons/calendar_month.svg&quot;);">
-  
+
                      </span> -->
             <!-- <div> 2022 - 2024 </div></div></div></div><div class="education ng-star-inserted">
-                      <div  class="img vertical-align"><img width="36" height="36" loading="lazy" 
+                      <div  class="img vertical-align"><img width="36" height="36" loading="lazy"
                         src="https://d8it4huxumps7.cloudfront.net/images/partners/partners75/5aa7961c406d2_jabalpur-engineering-college-jabalpur-logo.gif?d=110x110" alt="Jabalpur Engineering College (JEC), Jabalpur" class="ng-star-inserted">
-                        
+
                       </div>
                       <div class="cptn">
-                        
+
                         <div class="org">
                           <span class="icon ng-star-inserted" style="--active: var(--grey-800); --color: var(--grey-800); --hover: var(--grey-800); --size: 18px; mask-image: url(&quot;https://cdn.unstop.com/assets/icons/school.svg&quot;);"></span><!----><!----><!----><!---->
             <!-- <div > B.E. </div></div><div _ngcontent-serverapp-c511844803="" class="org">
                             <span class="icon ng-star-inserted" style="--active: var(--grey-800); --color: var(--grey-800); --hover: var(--grey-800); --size: 18px; mask-image: url(&quot;https://cdn.unstop.com/assets/icons/calendar_month.svg&quot;);"></span>
                             <div > 2016 - 2020 </div></div></div></div></div>
    -->
-  
-  
-  
-  
-  
+
+
+
+
+
             <!-- <div class="card">
-         
-               
+
+
                 <div class="profile-section">
                   <h5>Work Experience</h5>
                   <div class="experience-item">
@@ -689,11 +689,11 @@
                     <p><strong>Start Date:</strong> startDate | date:'longDate'</p>
                     <p><strong>End Date:</strong> Ongoing</p>
                     <p><strong>End Date:</strong> endDate | date:'longDate'</p>
-               
+
                   </div>
                 </div>
               </div> -->
-  
+
             <div *ngIf="mentorProfile?.Experiences?.length > 0" class="card mb-4">
               <div class="profile-section">
                 <h5 class="   ">Work Experience</h5>
@@ -717,40 +717,40 @@
                       </div>
                     </div>
                   </div>
-  
-  
-  
-  
-  
+
+
+
+
+
                   <!-- Show More/Show Less Button -->
                   <button *ngIf="mentorProfile?.Experiences?.length > maxItemsToShow" class="btn btn-link"
                     (click)="toggleShowAll()">
                     {{ showAll ? 'Show Less' : 'Show More' }}
                   </button>
-  
-  
+
+
                 </div>
               </div>
             </div>
-  
-  
-  
-  
+
+
+
+
           </div>
         </div>
-  
-  
-  
-  
-  
+
+
+
+
+
         <!-- </div> -->
         <!-- </div> -->
-  
+
       </div>
     </section>
     <!--mentor-->
-  
-  
+
+
     <section *ngIf="similarMentors?.length>0" class="pb-xl-8 pb-6 mt-5">
       <div class="container">
         <div class="row">
@@ -765,13 +765,13 @@
             <div class="card rounded-4 card-bordered card-lift">
               <div class="p-3 d-flex flex-column gap-3">
                 <!--img-->
-  
+
                 <a [routerLink]="['/mentors',mentor.ID]">
                   <img src="http://localhost:5164/{{mentor.Image}}"
                     style="width: 100%; height: 100%; border-radius: 10px;cursor: pointer;"
                     onerror="this.onerror=null; this.src='http://localhost:5164/profile_images/Default1.png';">
                 </a>
-  
+
                 <!--content-->
                 <div class="d-flex flex-column gap-4">
                   <div class="d-flex flex-column gap-2">
@@ -792,7 +792,7 @@
                       </div>
                       <span class="text-gray-800">{{mentor.Title}}</span>
                     </div>
-  
+
                     <div class="d-flex align-items-center justify-content-between fs-6">
                       <div>
                         <span>{{mentor.YearsOfExperience}} Yrs Exp.</span>
@@ -828,11 +828,11 @@
                   </a> -->
                   @if (mentor.Status==0
                   ){
-                  <button class="btn btn-outline-success accept-btn" (click)="changeRole()">
+                  <button class="btn btn-outline-success accept-btn" (click)="updateStatus(userId)" >
                     <i class="fa-regular fa-handshake"></i> Accept Request
                   </button>
-                  
-                  <a class="btn btn-outline-danger reject-btn" (click)="updateStatus(userId)">
+
+                  <a class="btn btn-outline-danger reject-btn" (click)="changeRole()" >
                     <i class="fa-solid fa-circle-question"></i> Reject Request
                   </a>}
                   @if (mentorProfile.Status==2 ){
@@ -851,14 +851,14 @@
         </div>
       </div>
     </section>
-  
+
     <!--mentor-->
   </main>
-  
-  
-  
-  
-  
+
+
+
+
+
   <!-- <div class="profile-section">
     <h5>Education</h5>
     <div class="education-item" *ngFor="let education of educationList">
@@ -871,7 +871,7 @@
       <p *ngIf="education.tillNow"><strong>End Date:</strong> Ongoing</p>
       <p *ngIf="!education.tillNow"><strong>End Date:</strong> {{education.endDate | date:'longDate'}}</p>
     </div>
-  
+
     <h5>Experience</h5>
     <div class="experience-item" *ngFor="let experience of experienceList">
       <p><strong>Field of Study:</strong> {{experience.fieldOfStudy}}</p>
